--- a/Blog-Backend/package.json
+++ b/Blog-Backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "web3": "^4.11.1"
